--- a/mac_environment.yml
+++ b/mac_environment.yml
@@ -20,9 +20,11 @@ dependencies:
     - flask
     - boto3
     - ipykernel
+    - scikeras
     - pip:
         - tensorflow-macos==2.9
         - tensorflow-metal==0.5.0
         - bayesian-optimization
         - gym
         - kaggle
+        - transformers
